--- a/assets/css/less_parts/githubcard.less
+++ b/assets/css/less_parts/githubcard.less
@@ -62,7 +62,9 @@
   }
 
   .followMe {
-    margin-top: 3px;
+    margin-top: 6px;
+    display: flex;
+    align-items: center;
   }
 
   .follow-button {
@@ -89,13 +91,14 @@
     position: relative;
     background: #FFF;
     margin-left: 8px;
-    padding: 3px 8px;
+    padding: 5px 8px;
     color: #444;
     font-size: 0.8em;
     border: 1px solid;
     border-color: #BBB;
-    margin-top: 5px;
     border-radius: 2px;
+    height: 11px;
+    line-height: 1;
   }
 
   .followMe span::before {
@@ -139,8 +142,8 @@
       width: auto;
       border-width: 1px 0;
       /* color: #29d4a7; */
-      font-size: 1.4em;
-      padding: 15px 15px 0;
+      font-size: 1em;
+      padding: 15px 0 0;
       height: fit-content;
       text-transform: uppercase;
       font-family: 'mr-eaves-xl-modern', sans-serif;
@@ -149,7 +152,7 @@
     a {
       position: relative;
       display: block;
-      margin: 7px 10px;
+      margin: 7px 0;
       font-size: 0.9em;
       border-top: 0;
       width: auto;
@@ -227,11 +230,11 @@
 
   .name {
     display: block;
-    font-size: 1.7em;
-    font-weight: bold;
+    font-size: 1.2em;
+    /* font-weight: bold; */
     color: #222;
+    text-transform: uppercase;
     font-family: 'mr-eaves-xl-modern', sans-serif;
-    margin-bottom: 5px;
   }
 
   .error {
