--- a/assets/css/less_parts/post.less
+++ b/assets/css/less_parts/post.less
@@ -48,6 +48,12 @@
 			}
 		}
 
+		.post-title {
+			@media (max-width: 800px) {
+				text-align: center;
+			}
+		}
+
 		.meta-item {
 			margin: 0 20px 0 0;
 			float: left;
@@ -445,7 +451,7 @@
 			/*white-space: nowrap;*/
 			@media(max-width: 800px) {
 				white-space: normal;
-				text-align: center;
+
 			}
 
 			a {
