--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -23,7 +23,7 @@
 			}
 
 			if (docs[0]['linkedin']) {
-				$('.sidebar').append('<div class="widget"><div class="content"><h4 class="title">LinkedIn</h4><div style="width:100%;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="' + docs[0]['linkedin'] +'"><a class="LI-simple-link" href="https://www.linkedin.com/in/' + docs[0]['linkedin'] + '?trk=profile-badge">Todd Birchard</a></div></div></div>');
+				$('.sidebar').append('<div class="widget"><div class="content"><h4 class="title">LinkedIn</h4><div style="width:100%;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="' + docs[0]['linkedin'] +'"><a class="LI-simple-link" href="https://www.linkedin.com/in/' + docs[0]['linkedin'] + '?trk=profile-badge">' + docs[0]['name'] + '</a></div></div></div>');
 			}
 
 			if (docs[0]['meetup']) {
@@ -52,16 +52,13 @@
 			if (docs[0]['tableau']) {
 				var apifyUrl = 'https://api.apify.com/v1/p9hj4TFpjvujADTJ3/crawlers/wztnovMJiQKzbXWDe/lastExec/results?token=Ycfxu6J2Jyk8HyboKuEw4Jfy7';
 			}
-
-
-
 		}
 
 		const clientPromise = stitch.StitchClientFactory.create('hackerauthors-kjmze');
 		clientPromise.then(client => {
-			const db = client.service('mongodb', 'mongodb-atlas').db('HackersBlog');
+			const db = client.service('mongodb', 'mongodb-atlas').db('authors');
 			client.login().then(() =>
-				db.collection('authors').find({
+				db.collection('social').find({
 					author: '{{slug}}'
 				}).execute()
 			).then(docs => {
