--- a/assets/css/less_parts/kanban.less
+++ b/assets/css/less_parts/kanban.less
@@ -40,7 +40,7 @@
     width: 23%;
     background: white;
     border: 1px solid #f9f9f9;
-    padding: 20px;
+    padding: 30px;
 
     @media(max-width: 800px){
       width:80%;
@@ -67,7 +67,7 @@
         padding: 10px 15px;
         position: relative;
         border: 1px solid #f1f1f1;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         overflow: hidden;
         border-radius: 3px;
 
@@ -202,10 +202,13 @@
           .epic {
             border-radius: 4px;
             text-align: center;
-            /*padding: 1px 10px;*/
+
+            i {
+              margin-right: 5px;
+            }
 
             span {
-              color: white;
+              color: #343434;
               font-size: 12px;
               font-family: 'akzidenz';
             }
