--- a/assets/css/less_parts/postpreview.less
+++ b/assets/css/less_parts/postpreview.less
@@ -14,7 +14,7 @@
 		margin: 10px 0 20px;
 
 		@media(max-width: 600px){
-			margin: 0 0 25px;
+			margin: 0 0 20px;
 		}
 
 		.post-title {
@@ -119,7 +119,7 @@
 		text-align: left;
 		display: flex;
 		justify-content: space-between;
-		padding: 10px 0;
+		padding: 0 0 10px;
 
 		.btn {
 			font-size: 14px;
@@ -136,7 +136,7 @@
 
 	.post-content {
 		line-height: 1.5;
-		margin: 0 0 25px;
+		margin: 0 0 20px;
 
 		.kg-card-markdown {
 			  text-align: justify;
