--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -32,14 +32,31 @@
     padding: 30px;
     margin: 10px 0;
     width: 40%;
+    border: 1px solid #dcdcdc;
+		border-radius: 4px !important;
 
     @media(max-width: 1040px) {
       padding: 20px;
+      border: 0 !important;
+      border-bottom: 1px solid #dcdcdc !important;
+      width: 100% !important;
+
+      &:last-child {
+        border-bottom: 0 !important;
+      }
     }
 
     @media(max-width: 600px) {
       display: block !important;
     }
+
+    i {
+			color: @text-color-light !important;
+		}
+
+		span {
+			color: @text-color-light;
+		}
 
     .author-container {
       justify-content: space-around;
@@ -62,25 +79,25 @@
     }
 
     .avatar-link {
-      width:28%;
+      width: 80px;
+      height: 80px;
+      margin-bottom: 15px;
       display: inline-block;
       height: fit-content;
 
       @media(max-width: 1040px) {
-        width:12%;
+        width: 80px;
+        height: 80px;
         margin: 0 auto 15px;
         display: block;
       }
 
     .avatar {
       width: 100%;
-      height: 100%;
+      height: auto;
       margin: 0;
       .border-radius(50%);
-      @media(max-width: 600px) {
-        width: 70px;
-        height: 70px;
-      }
+      max-height: 80px;
     }
   }
 
@@ -101,6 +118,8 @@
       line-height: 1.5;
       margin: 10px 0 0;
       font-weight: 100;
+      float: left !important;
+			font-size: 14px;
 
       @media(max-width: 1040px) {
         text-align: center;
@@ -134,7 +153,7 @@
         display: block;
 
         @media (max-width: 1040px) {
-          margin:0 15px;
+          margin:0 15px 3px;
         }
 
         i {
