--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -29,9 +29,8 @@
     <div class="cards"></div>
   </div>
 </div>
-<script type="text/javascript" src="{{asset "/js/stitch.min.js"}}"></script>
-<!--<script type="text/javascript" src="{{asset "/js/handlebars.js"}}"></script>-->
-<script type="text/javascript" src="{{asset "/js/fetch.min.js"}}"></script>
+<script type="text/javascript" src="{{asset "/js/includes/stitch.min.js"}}"></script>
+{{!--<script type="text/javascript" src="{{asset "/js/includes/fetch.min.js"}}"></script>--}}
 <!--<script type="text/javascript" src="{{asset "/js/kanban.js"}}"></script>-->
 <script>
 
