--- a/post.hbs
+++ b/post.hbs
@@ -39,7 +39,7 @@
 					{{#has tag="Roundup"}}
 					<div class="post-roundup-blurb">
 						<div class="blurb-icon"></div>
-						<p>Each night shadowy figure Snkia emerges from the shadows bearing gifts for human and robot-kind. Frantic research summed up in just a few choice hyperlinks, only on Lynx Roundup.</p>
+						<p>Each night resident scientist Snkia emerges from the shadows bearing gifts for human and robot-kind. Frantic research summed up in just a few choice hyperlinks, only on Lynx Roundup.</p>
 					</div>
 					{{/has}}
 
