--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -71,5 +71,5 @@
 		</div>
 	</div>
 </section>
-<script src="{{asset "/js/jquery-ui.min.js"}}"></script>
+<script src="{{asset "/js/includes/jquery-ui.min.js"}}"></script>
 <!-- end site's main content area -->
