--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,3 +1,6 @@
+@import "variables.less";
+@import "mixin.less";
+
 /*====================================================
 	footer
 ====================================================*/
