--- a/src/less/global.less
+++ b/src/less/global.less
@@ -1,3 +1,5 @@
+@import "variables.less";
+@import "mixin.less";
 /*====================================================
 	common styles
 ====================================================*/
