--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -1,3 +1,5 @@
+@import "variables.less";
+
 /*====================================================
 	MIXINS
 ====================================================*/
@@ -12,11 +14,11 @@
 	border-radius:         @string;
 }
 .transition (@transition) {
-	-webkit-transition: @transition;  
+	-webkit-transition: @transition;
 	-moz-transition: @transition;
-	-ms-transition: @transition; 
+	-ms-transition: @transition;
 	-o-transition:  @transition;
-	transition: @transition; 
+	transition: @transition;
 }
 .transform(@string){
 	-webkit-transform: @string;
