--- a/src/less/post.less
+++ b/src/less/post.less
@@ -1,3 +1,6 @@
+@import "variables.less";
+@import "mixin.less";
+
 .post-template {
 	/*====================================================
 		main post area
