--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -1,29 +1,29 @@
 /*====================================================
 	Importing less files
 ====================================================*/
-@import "less_parts/variables.less";
-@import "less_parts/mixin.less";
+@import "variables.less";
+@import "mixin.less";
 
-@import "less_parts/author.less";
-@import "less_parts/global.less";
-@import "less_parts/footer.less";
-@import "less_parts/menu.less";
-@import "less_parts/post.less";
-@import "less_parts/postfooter.less";
-@import "less_parts/postpreview.less";
-@import "less_parts/variables.less";
+@import "author.less";
+@import "global.less";
+@import "footer.less";
+@import "menu.less";
+@import "post.less";
+@import "postfooter.less";
+@import "postpreview.less";
+@import "variables.less";
 
-@import "less_parts/customtemplates.less";
-@import "less_parts/hacks.less";
-@import "less_parts/linkpreview.less";
-@import "less_parts/widgets.less";
-@import "less_parts/pagination.less";
-@import "less_parts/page.less";
-@import "less_parts/postheader.less";
-@import "less_parts/postlist.less";
-@import "less_parts/tags.less";
-@import 'less_parts/githubcard.less';
-@import 'less_parts/kanban.less';
+@import "customtemplates.less";
+@import "hacks.less";
+@import "linkpreview.less";
+@import "widgets.less";
+@import "pagination.less";
+@import "page.less";
+@import "postheader.less";
+@import "postlist.less";
+@import "tags.less";
+@import 'githubcard.less';
+@import 'kanban.less';
 
 
 /*====================================================
