--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -23,7 +23,9 @@
 		<div class="content">
 			<div class="post-head">
 				<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
-				<h5 class="post-excerpt">{{excerpt words="20"}}</h5>
+				{{#if excerpt}}
+					<h5 class="post-excerpt">{{excerpt words="20"}}</h5>
+					{{/if}}
 			</div>
 			<div class="post-content">
 				{{content words="80"}}
