--- a/src/less/global.less
+++ b/src/less/global.less
@@ -58,7 +58,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'mr-eaves-xl-modern', serif;
+	font-family: 'Lulo-Bold', 'mr-eaves-xl-modern', serif;
 	font-weight: 700;
 	color: @text-color-heading;
 }
