--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -49,6 +49,11 @@
 	src: url("../fonts/akzidenzgrotesk-bq-regular.otf") format("opentype");
 }
 
+@font-face {
+	font-family: 'Lulo-Bold';
+	src: url("../fonts/Lulo Clean One Bold.otf") format("opentype");
+}
+
 /*====================================================
 	about author and comment and next-prev link
 ====================================================*/
