--- a/src/less/post.less
+++ b/src/less/post.less
@@ -310,6 +310,8 @@
 		background: @white;
 		padding: 40px 80px;
 		margin: 20px 0;
+		min-height: 88px;
+
 		@media(max-width: 1000px) {
 			padding: 30px 40px;
 			margin: 20px;
@@ -467,7 +469,11 @@
 			}
 		}
 
-		h5 {
+		h5,
+		h4 {
+			margin-top: 5px;
+			margin-bottom: 0;
+
 			@media (max-width: 800px) {
 				text-align: center;
 			}
