--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -13,7 +13,8 @@
 					contentType: "application/json",
 					dataType: 'json',
 					success: function(result) {
-						$('.sidebar').append('<div class="widget" style="order: 0;"><div class="content"><h4 class="title">Website</h4><a href="' + result.url + '"><div class="link-preview" style="background:url(' + result.image + ')"><a>' + result.title + '</a><i class="fas fa-link"></i></div></a></div></div>');
+						$('.sidebar').append('<div class="widget" style="order: 0;"><div class="content"><h4 class="title">Website</h4><a href="' + result.url + '"><div class="link-preview" style="background:url(' + result.image + ')"><a>' + result.title +
+							'</a><i class="fas fa-link"></i></div></a></div></div>');
 					}
 				});
 			}
@@ -23,7 +24,9 @@
 			}
 
 			if (docs[0]['linkedin']) {
-				$('.sidebar').append('<div class="widget"><div class="content"><h4 class="title">LinkedIn</h4><div style="width:100%;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="toddbirchard"><a class="LI-simple-link" href="https://www.linkedin.com/in/' + docs[0]['linkedin'] + '?trk=profile-badge">' + docs[0]['linkedin'] + '</a></div></div></div>');
+				$('.sidebar').append(
+					'<div class="widget"><div class="content"><h4 class="title">LinkedIn</h4><div style="width:100%;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="toddbirchard"><a class="LI-simple-link" href="https://www.linkedin.com/in/' +
+					docs[0]['linkedin'] + '?trk=profile-badge">' + docs[0]['linkedin'] + '</a></div></div></div>');
 			}
 
 			if (docs[0]['meetup']) {
@@ -33,20 +36,39 @@
 					dataType: 'jsonp',
 					success: function(result) {
 						//console.log("JSON.stringify(result) = " + JSON.stringify(result));
-						$('.sidebar').append('<div class="widget meetup"><div class="content"><h4 class="title">Meetup</h4> \n '
-						+ '<a href="https://www.meetup.com/members/' + result['data']['id'] + '/"> \n '
-						+ '<img src="' + result['data']['photo']['thumb_link'] + '"> \n'
-						+ '<div class="info">'
-						+ '<span class="name">' + result['data']['name'] + '</span> \n '
-						+ '<span class="location">' + result['data']['city'] + '</span></a> \n '
-						+ '<span class="country">' + result['data']['localized_country_name'] + '</span></div></a> \n '
-						+ '<p>' + result['data']['bio'] + '</p></div></div>');
+						$('.sidebar').append('<div class="widget meetup"><div class="content"><h4 class="title">Meetup</h4> \n ' +
+							'<a href="https://www.meetup.com/members/' + result['data']['id'] + '/"> \n ' +
+							'<img src="' + result['data']['photo']['thumb_link'] + '"> \n' +
+							'<div class="info">' +
+							'<span class="name">' + result['data']['name'] + '</span> \n ' +
+							'<span class="location">' + result['data']['city'] + '</span></a> \n ' +
+							'<span class="country">' + result['data']['localized_country_name'] + '</span></div></a> \n ' +
+							'<div class="events"></div>');
+					}
+				});
+
+				$.ajax({
+					url: 'https://api.meetup.com/2/events?&sign=true&photo-host=public&rsvp=yes&member_id=' + docs[0]['meetup'] + '&page=20',
+					contentType: "application/json",
+					dataType: 'jsonp',
+					success: function(result) {
+						console.log('result = ' + JSON.stringify(result));
+						if (result.length == 0) {
+							$('.events').append('<span>No upcoming events :(</span>');
+						} else {
+							for (var i = 0; i < result.length; i++) {
+								$('.events').append('<div class="event"><div class="content"><h4 class="title">Meetup</h4> \n ' +
+									'<a href="https://www.meetup.com/members/' + result['data']['id'] + '/"> \n ');
+							}
+						}
 					}
 				});
 			}
 
 			if (docs[0]['twitter']) {
-				$('.sidebar').append('<div class="widget" style="order:2;><div class="content twitter"><h4 class="title">Twitter</h4><a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar" data-tweet-limit="5" data-link-color="#26a2c7" href="https://twitter.com/' + docs[0]['twitter'] + '?ref_src=twsrc%5Etfw"></a></div></div>');
+				$('.sidebar').append(
+					'<div class="widget" style="order:2;><div class="content twitter"><h4 class="title">Twitter</h4><a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar" data-tweet-limit="5" data-link-color="#26a2c7" href="https://twitter.com/' +
+					docs[0]['twitter'] + '?ref_src=twsrc%5Etfw"></a></div></div>');
 			}
 
 			if (docs[0]['tableau']) {
