--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -159,13 +159,13 @@
       font-size: 0.9em;
       border-top: 0;
       width: auto;
-      background: #f9f9f9;
+      background-color: #f9f9f9;
       padding: 16px;
       transition: .2s all easeout;
 
       &:hover,
       &:hover span {
-        background-color: @hover-color;
+        background-color: #d5f0f3;
         color: white;
         cursor: pointer;
       }
