--- a/src/less/author.less
+++ b/src/less/author.less
@@ -2,69 +2,145 @@
 @import "mixin.less";
 
 .author-template {
-
 	.widget {
-		order:1;
+		order: 1;
 	}
 
 	.sidebar {
 		display: flex;
 		flex-direction: column;
-
 		@media (max-width: 1000px) {
 			display: none !important;
 		}
 
 		.meetup {
+			.userprofile {
+				padding-bottom: 10px;
+				margin-bottom: 10px;
+				/*border-bottom: 1px solid #e8e8e8;*/
+				.avatar {
+					display: inline-block;
+					margin-right: 15px;
+					height: 70px;
+					border-radius: 50%;
+				}
 
-			.name {
-				font-size: 1.4em;
-				font-family: 'akzidenz-regular', sans-serif;
+				.info {
+					display: inline-block;
+
+					.name {
+						font-size: 1.4em;
+						font-family: 'akzidenz-regular', sans-serif;
+					}
+
+					.country,
+					.location {
+						display: block;
+					}
+				}
 			}
 
-			.location,
-			.country {
-				display:block;
+			.noevents {
+				text-align: center;
+				padding: 20px;
+				display: block;
+				color: #a7a7a7;
+				font-size: 16px;
+				font-style: italic;
 			}
 
-			img {
-				display: inline-block;
-				margin-right: 15px;
-				height: 70px;
-			}
+			.events {
+				.event {
+					background: #fafafa;
+					padding: 15px;
+					margin-bottom: 10px;
+					transition: all .2s easeout;
 
-			.info {
-				display: inline-block;
+					&:hover {
+						    background: #d5f0f3;
+								span {
+									color: white;
+								}
+					}
+
+					.eventheader {
+						display: flex;
+						justify-content: space-between;
+						margin-bottom: 10px;
+
+						.eventimg {
+							display: inline-block;
+							margin-right: 15px;
+							height: auto;
+							width: 60px;
+							height: 60px;
+							background-size: cover;
+							background-position: center;
+							border-radius: 2px;
+						}
+
+						.eventname {
+							font-size: 16px;
+							color: #505050;
+							display: inline-block!important;
+							line-height: 1.4;
+							padding-top: 5px;
+							font-family: mr-eaves-xl-modern,sans-serif;
+						}
+					}
+
+					.eventinfo {
+						display: inline-block;
+						overflow: hidden;
+						width: 100%;
+
+						.eventhost {
+							white-space: nowrap;
+							overflow: hidden;
+							text-overflow: ellipsis;
+							width: 257px;
+						}
+
+						i {
+							margin-right: 5px;
+						}
+
+						span {
+							display: block;
+							color: #505050;
+							margin: 0 0 5px 10px;
+							line-height: 1.5;
+						}
+					}
+				}
 			}
 		}
 	}
 
 	.LI-badge-container.horizontal.light,
 	.LI-badge-container.vertical.light {
-		width:100% !important;
+		width: 100% !important;
 		position: relative;
 		box-shadow: none;
-
 		/*
 		.LI-more-info {
 			float: left;
 		}
 		*/
-
 		.LI-footer {
 			position: absolute;
 			right: 15px;
 			bottom: 0;
-			padding: 0 0 10px 0;
+			padding: 0 0 10px;
 			margin: 0;
 			line-height: 1;
 
 			a {
 				border-color: transparent !important;
 				border: 0 !important;
-		    padding: 0;
-		    margin: 0;
-		    line-height: 1;
+				padding: 0;
+				margin: 0;
+				line-height: 1;
 
 				&:hover {
 					border: 0;
@@ -80,7 +156,6 @@
 			display: block;
 			text-align: left;
 		}*/
-
 		.LI-logo {
 			display: none;
 		}
@@ -88,33 +163,32 @@
 
 	.main-content {
 		width: 67%;
-		margin:auto;
-
-		@media(max-width: 1000px){
+		margin: auto;
+		@media(max-width: 1000px) {
 			width: 100%;
 		}
 	}
+
 	.container .tag-hash-upcoming {
 		display: none;
 	}
 
-  .author-cover  {
-	.avatar {
-		float:none !important;
-		margin:0 !important;
+	.author-cover {
+		.avatar {
+			float: none !important;
+			margin: 0 !important;
+		}
 	}
-}
 
 	h3 {
-		 font-size: 2em;
-		 margin:10px;
+		font-size: 2em;
+		margin: 10px;
 	}
 
 	.bio {
 		max-width: 500px;
 		margin: 15px auto 0;
 	}
-
 
 	.link-preview {
 		height: 167px;
