--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -43,7 +43,9 @@
     width: 23%;
     background: white;
     border: 1px solid #f9f9f9;
-    padding: 30px;
+    padding: 30px 30px 35px 30px;
+    position: relative;
+    margin-bottom: 7px;
 
     @media(max-width: 800px){
       width:80%;
@@ -224,6 +226,15 @@
           }
         }
       }
+    }
+
+    .count {
+      color: #ababab;
+      font-size: 14px;
+      font-family: 'proxima-nova',sans-serif;
+      position: absolute;
+      bottom: 0;
+      padding: 4px;
     }
   }
 }
