--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -84,10 +84,10 @@
   }
 
   .devops {
-    color: #de675a;
+    color: #495f6d;
 
     i {
-      color: #de675a !important;
+      color: #495f6d !important;
     }
   }
 
