--- a/partials/analytics.hbs
+++ b/partials/analytics.hbs
@@ -8,3 +8,27 @@
 
   gtag('config', 'UA-109840173-1');
 </script>
+
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '2087804058133817', {
+    'fn': 'todd',
+    'ln': 'birchard',
+    'ct': 'newyorkcity',
+    'st': 'ny',
+    'zp': '10011',
+  });
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=2087804058133817&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
