--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -1,5 +1,8 @@
 	{{#author}}
-	<div class="sidebar"></div>
+	<div class="sidebar">
+
+		{{> widget-authortwitter}}
+	</div>
 	<script type="text/javascript" src="{{asset "/js/includes/stitch.min.js"}}"></script>
 	<!--<script type="text/javascript" src="{{asset "/js/includes/linkedin.js"}}"></script>-->
 	<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
