--- a/partials/widget-authortwitter.hbs
+++ b/partials/widget-authortwitter.hbs
@@ -1,17 +1,13 @@
 {{#if author.twitter}}
 <!-- start widget -->
-
-<!-- start feedwind code -->  <!-- end feedwind code -->
-  <div class="widget">
-  <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78832/"></script> <!-- end feedwind code -->
-  	{{!--<h4 class="title">{{author.twitter}}</h4>
-  	<div class="content twitter">
-  		<!-- start code from publish.twitter.com -->
-      {{#author}}
-  			<a class="twitter-timeline" data-chrome="noheader nofooter noscrollbar" data-tweet-limit="3" data-link-color="@theme-color" href="{{twitter_url}}?ref_src=twsrc%5Etfw">{{twitter}}</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <!-- end code from publish.twitter.com -->
-      {{/author}}
-  	</div>--}}
+<!-- start widget -->
+<div class="widget">
+	<div class="content twitter">
+		<h4 class="title">Twitter</h4>
+			<a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar" data-tweet-limit="5" data-link-color="#26a2c7" href="https://twitter.com/" + author.twitter + "?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</div>
+</div>
+<!-- end widget -->
   </div>
 <!-- end widget -->
 {{/if}}
