removed #image functionality

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -150,31 +150,16 @@
 		}
 	}
 
+	.tag-roundup .post-content {
+		display: none;
+	}
+
 	.post-content {
 		line-height: 1.5;
 		margin: 0 0 20px;
 
-
-
 		@media(max-width: 600px) {
 			font-size: 16px;
-		}
-	}
-
-
-
-	&.tag-hash-upcoming,
-	&.upcoming {
-		display: none;
-	}
-
-	&.tag-roundup {
-		.featured-media {
-			display: none;
-		}
-
-		.post-content {
-			display: none;
 		}
 
 		.post-title {
@@ -184,11 +169,6 @@
 		}
 	}
 
-	&.tag-hash-image {
-		.featured-media {
-			display: block !important;
-		}
-	}
 	.kg-card-markdown * {
 		display: none;
 	}
