--- a/src/less/post.less
+++ b/src/less/post.less
@@ -16,9 +16,13 @@
 	}
 
 	h2 {
-		font-size: 2.5em;
+		margin-bottom: 20px;
+		color: @text-post-header;
 		line-height: 1;
-		font-weight: 200;
+		font-family: montserrat;
+		font-size: 2.3em;
+		border-bottom: 1px solid #efefef;
+		padding-bottom: 20px;
 		@media(max-width: 800px) {
 			font-size: 2em;
 			line-height: 1;
@@ -556,13 +560,10 @@
 		h2,
 		h3 {
 			margin-top: 40px;
-			margin-bottom: 0;
 			color: @text-post-header;
 			line-height: 1;
 		}
 
-		h2,
-		h3 {}
 
 		ol,
 		ul {
