--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -99,6 +99,14 @@
     }
   }
 
+  .googlecloud {
+    color: #1990f5;
+
+    i {
+      color: #1990f5 !important;
+    }
+  }
+
   .datascience {
     color: #1CBBAF;
 
