--- a/src/less/post.less
+++ b/src/less/post.less
@@ -23,6 +23,7 @@
 		font-size: 2.3em;
 		border-bottom: 1px solid #efefef;
 		padding-bottom: 20px;
+		font-weight: 100 !important;
 		@media(max-width: 800px) {
 			font-size: 2em;
 			line-height: 1;
