--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -107,6 +107,16 @@
     }
   }
 
+  .sql {
+    color: #474663;
+
+    i {
+      color: #474663 !important;
+    }
+  }
+
+
+
   .datascience {
     color: #1CBBAF;
 
