--- a/default.hbs
+++ b/default.hbs
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/fontawesome-all.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/code.css"}}">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200" rel="stylesheet">
 
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
 
