--- a/post.hbs
+++ b/post.hbs
@@ -18,7 +18,7 @@
 					{{/if}}
 					<div class="post-head">
 						<h1 class="post-title">{{{title}}}</h1>
-							<h4>{{excerpt}}</h4>
+							<h4 class="excerpt">{{excerpt}}</h4>
 					</div>
 					<div class="post-meta">
 						{{#primary_tag}}
